<resources>
    <!-- Strings principales -->
    <string name="app_name">MensajeriaTapatia</string>
    <string name="lblBtnBack">Regresar</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mensajería Tapatía</string>
    <string name="nav_header_subtitle">Menú principal</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings de la bienvenida -->
    <string name="MainTitle">Mensajeria Tapatia</string>

    <!-- Log in -->
    <string name="lblTxtWelcome">Bienvenido</string>
    <string name="lblWelSubtitle">Ingresa tus credenciales para iniciar</string>
    <string name="lblEdtUser">Email</string>
    <string name="lblEdtPassword">Contraseña</string>
    <string name="lblBtnLogin">Entrar</string>
    <string name="lblBtnExit">Salir</string>
    <string name="lblTxtSignin">¿Eres nuevo? Registrate ahora</string>

    <!-- Sign in -->
    <string name="titleSignin">Registrate</string>
    <string name="subtitleSignin">Completa todos los campos y registrate</string>
    <string name="promtpName">Nombre</string>
    <string name="promtpEmail">Correo</string>
    <string name="promtpAge">Edad</string>
    <string name="promptPassword">Contraseña</string>
    <string name="lblBtnRegister">Registrar</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings de los botones -->
    <string name="menu_home">Inicio</string>
    <string name="menu_mensaje">Nuevo Mensaje</string>
    <string name="menu_destinatario">Nuevo Destinatario</string>
    <string name="menu_gallery">Nuevo Mensaje</string>
    <string name="menu_slideshow">Nuevo destinatario</string>

    <!-- Strings de los botones -->
    <string name="menu_mensajero">Nuevo Mensajero</string>
    <string name="menu_busqueda">Busqueda</string>
    <string name="menu_historial">Historial</string>

    <!-- Fragment Home-->
    <string name="saludo">Hola</string>
    <string name="usuario">Variable!</string>
    <string name="nosotros">Sobre Nosotros</string>
    <string name="mensaje">Bienvenido a Mensajeria Tapatía, tu solución de mensajería rápida y confiable. Simplificamos el proceso de envío de mensajes y paquetes para que puedas comunicarte con tus seres queridos y clientes de manera eficiente. ¡Descubre como mejorar tu experiencia de mensajería con nosotros!</string>


    <!-- Fragment nuevo mensaje-->
    <string name="campos">Llenar los campos para agregar un mensaje</string>
    <string name="destinatario">Destinatarios</string>
    <string name="mensajero">Mensajero</string>
    <string name="tipo">Tipo</string>
    <string name="texto">Texto</string>
    <string name="entrar">Entra></string>
    <!--Radio button -->
    <string name="rbMensaje">Mensaje</string>
    <string name="rbPaquete">Paquete</string>

    <!-- Fragment Destinatario-->
    <string name="campos2">Llenar los campos para agregar un destinatario</string>
    <string name="nombreD">Nombre Destinitario</string>
    <string name="direccionD">Direccion</string>
    <string name="agregarD">Agregar</string>


    <!-- Fragment Mensajero -->
    <string name="campos3">Llenar los campos para agregar un mensajero</string>
    <string name="empresa">Empresa</string>
    <string name="direccionM">Direccion</string>
    <string name="nombreMensajero">Nombre</string>
    <string name="vehiculo">Vehiculo</string>
    <string name="entraM">Entra></string>

    <!-- Fragment Historial-->
    <string name="infoH">Mensajes que has mandando</string>
    <string name="Mensaje1">Mensaje 1</string>
    <string name="mensaje2">Mensaje 2</string>
    <string name="mensaje3">Mesaje 3</string>
    <string name="mensaje4">Mensaje 4</string>
    <string name="mensaje5">Mensaje 5</string>

    <!-- Fragment Busqueda -->
    <string name="infoBusqueda">Llena los campos para generar un mensaje</string>
    <string name="folio">Folio</string>

</resources>