<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_mensajero">

    <TextView
        android:id="@+id/txtTitulo5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_mensajero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/campos3"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/edtEmpresa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/empresa"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/edtDireccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/direccionM"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/edtEmpresa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/edtNombreM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombreMensajero"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/edtDireccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/edtVehiculo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/vehiculo"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEntra2"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnEntra2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
