<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment" >

    <TextView
        android:id="@+id/txtTituloMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="175dp"
        android:text="@string/menu_mensajero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRellenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="22dp"
        android:text="@string/campos"
        app:layout_constraintBottom_toTopOf="@+id/edtDestinatario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloMensaje" />

    <EditText
        android:id="@+id/edtDestinatario"
        android:layout_width="328dp"
        android:layout_height="53dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/destinatario"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edtMensajero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRellenar" />

    <EditText
        android:id="@+id/edtMensajero"
        android:layout_width="328dp"
        android:layout_height="53dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/mensajero"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtTipoMensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDestinatario" />

    <RadioGroup
        android:id="@+id/rgTipoM"
        android:layout_width="109dp"
        android:layout_height="115dp"
        android:layout_marginStart="76dp"
        app:layout_constraintStart_toEndOf="@+id/txtTipoMensaje"
        app:layout_constraintTop_toBottomOf="@+id/txtTipoMensaje">

        <RadioButton
            android:id="@+id/rbMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMensaje" />

        <RadioButton
            android:id="@+id/rbPaquete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbPaquete" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtTipoMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="339dp"
        android:layout_marginBottom="142dp"
        android:text="@string/tipo"
        app:layout_constraintBottom_toTopOf="@+id/edtTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMensajero" />

    <EditText
        android:id="@+id/edtTexto"
        android:layout_width="302dp"
        android:layout_height="115dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/texto"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnEntra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTipoM" />

    <Button
        android:id="@+id/btnEntra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="44dp"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTexto" />

</androidx.constraintlayout.widget.ConstraintLayout>