<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/plainText"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/nav_header_vertical_spacing"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/nav_header_vertical_spacing"
    android:orientation="vertical"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="-35dp"
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="94dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/titles"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textStyle="bold" />

</LinearLayout>